--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "firebase": "^9.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
-    "styled-components": "^6.1.13",
     "react-native-web": "~0.19.10",
-    "@expo/metro-runtime": "~3.2.3"
+    "styled-components": "^6.1.13",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
